# rexx-tree-sitter

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  backup-grammer.js  basic_rexx.rexx  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.rexx  test1.rexx  todo.txt  tree-sitter.json
bindings/c/: tree-sitter-rexx.pc.in
bindings/c/tree_sitter/: tree-sitter-rexx.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rexx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRexxTests/: TreeSitterRexxTests.swift
src/: grammar.json  node-types.json  parser.c
